--- a/validate.html
+++ b/validate.html
@@ -54,18 +54,16 @@
 
     //TODO: Improve this function to allow names but stop anything that isn't a name.
     function is_name_valid(input){
-      if(input.substr("script") > -1)
-        return false;
-
-      if(input.substr("iframe") > -1)
-        return false;
-      
-      return true;
+      const nameRegex = /^[A-Za-z\s\-']{2,50}$/; 
+      return nameRegex.test(input);
     }
 
     //TODO: Implement this method to allow age and stop anything else.
     function is_age_valid(input){
-      return true;
+      const ageRegex = /^\d+$/;
+      const age = parseInt(input);
+      return ageRegex.test(input) && age >= 18 && age <= 120;
+      
     }
   </script>
 </body>
